--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "content-type": "^1.0.4",
+    "ejs": "^2.5.7",
+    "heredoc": "^1.3.1",
     "koa": "^2.3.0",
     "raw-body": "^2.3.2",
     "sha1": "^1.1.1",
