--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.16.2",
+    "bluebird": "^3.5.0",
     "content-type": "^1.0.4",
     "ejs": "^2.5.7",
+    "form-data": "^2.3.1",
     "heredoc": "^1.3.1",
     "koa": "^2.3.0",
     "raw-body": "^2.3.2",
+    "request": "^2.81.0",
     "sha1": "^1.1.1",
     "xml2js": "^0.4.19"
   }
