--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "content-type": "^1.0.4",
+    "crypto": "^1.0.1",
     "ejs": "^2.5.7",
     "form-data": "^2.3.1",
     "heredoc": "^1.3.1",
