--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "ejs": "^2.5.7",
     "form-data": "^2.3.1",
     "heredoc": "^1.3.1",
+    "jsonwebtoken": "^8.0.1",
     "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.1.0",
+    "koa-router": "^7.2.1",
+    "mongoose": "^4.10.6",
     "raw-body": "^2.3.2",
     "request": "^2.81.0",
     "sha1": "^1.1.1",
