--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-json": "^2.0.2",
     "koa-logger": "^3.1.0",
     "koa-router": "^7.2.1",
+    "koa-views": "^6.1.1",
     "mongoose": "^4.10.6",
     "raw-body": "^2.3.2",
     "request": "^2.81.0",
