--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "request": "^2.81.0",
     "sha1": "^1.1.1",
     "xml2js": "^0.4.19"
+  },
+  "devDependencies": {
+    "axios": "^0.16.2"
   }
 }
