--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "axios": "^0.16.2"
+    "axios": "^0.16.2",
+    "qiniu": "^7.1.1"
   }
 }
