--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "busboy": "^0.2.14",
     "content-type": "^1.0.4",
     "crypto": "^1.0.1",
     "ejs": "^2.5.7",
@@ -21,6 +22,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.1.0",
+    "koa-multer": "^1.0.2",
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
     "koa-views": "^6.1.1",
